--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 
 h1{
     color: blue;
-    font-family: Arial, sans-serif;
+    font-family: Arial;
     text-align: center;
     margin-top: 50px;
+    padding: 10px;
+    border: solid 1px black;
 }
 
