--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 h1{
     color: blue;
-    font-family: Arial;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
     margin-top: 50px;
     padding: 10px;
