--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 h1{
     color: blue;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, sans-serif;
     text-align: center;
     margin-top: 50px;
     padding: 10px;
